--- a/simulate.ipynb
+++ b/simulate.ipynb
@@ -137,6 +137,8 @@
     }
    ],
    "source": [
+    "# Make it more complex, with a bank (e.g. $1000) that can be used instead of only one unit\n",
+    "\n",
     "periods = 253\n",
     "last_training = 185.66\n",
     "\n",
